welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: '(' expected but identifier found.
    if estFaceMur() == True:
       ^